students/itaylor3/itaylor3.Lab00.compile.out
compiling files:
./hello_world.cpp

g++ -std=c++14 -Wall -g -o"run_me" *.cpp
hello_world.cpp:1:1: error: stray ‘\’ in program
 {\rtf1\ansi\ansicpg1252\cocoartf1561\cocoasubrtf100
 ^
hello_world.cpp:1:1: error: stray ‘\’ in program
hello_world.cpp:1:1: error: stray ‘\’ in program
hello_world.cpp:1:1: error: stray ‘\’ in program
hello_world.cpp:1:1: error: stray ‘\’ in program
hello_world.cpp:2:1: error: stray ‘\’ in program
 {\fonttbl\f0\fmodern\fcharset0 Courier;}
 ^
hello_world.cpp:2:1: error: stray ‘\’ in program
hello_world.cpp:2:1: error: stray ‘\’ in program
hello_world.cpp:2:1: error: stray ‘\’ in program
hello_world.cpp:3:1: error: stray ‘\’ in program
 {\colortbl;\red255\green255\blue255;\red0\green0\blue0;}
 ^
hello_world.cpp:3:1: error: stray ‘\’ in program
hello_world.cpp:3:1: error: stray ‘\’ in program
hello_world.cpp:3:1: error: stray ‘\’ in program
hello_world.cpp:3:1: error: stray ‘\’ in program
hello_world.cpp:3:1: error: stray ‘\’ in program
hello_world.cpp:3:1: error: stray ‘\’ in program
hello_world.cpp:4:1: error: stray ‘\’ in program
 {\*\expandedcolortbl;;\cssrgb\c0\c0\c0;}
 ^
hello_world.cpp:4:1: error: stray ‘\’ in program
hello_world.cpp:4:1: error: stray ‘\’ in program
hello_world.cpp:4:1: error: stray ‘\’ in program
hello_world.cpp:4:1: error: stray ‘\’ in program
hello_world.cpp:4:1: error: stray ‘\’ in program
hello_world.cpp:5:1: error: stray ‘\’ in program
 \margl1440\margr1440\vieww10800\viewh8400\viewkind0
 ^
hello_world.cpp:5:1: error: stray ‘\’ in program
hello_world.cpp:5:1: error: stray ‘\’ in program
hello_world.cpp:5:1: error: stray ‘\’ in program
hello_world.cpp:5:1: error: stray ‘\’ in program
hello_world.cpp:6:1: error: stray ‘\’ in program
 \deftab720
 ^
hello_world.cpp:7:1: error: stray ‘\’ in program
 \pard\pardeftab720\sl280\partightenfactor0
 ^
hello_world.cpp:7:1: error: stray ‘\’ in program
hello_world.cpp:7:1: error: stray ‘\’ in program
hello_world.cpp:7:1: error: stray ‘\’ in program
hello_world.cpp:9:1: error: stray ‘\’ in program
 \f0\fs24 \cf2 \expnd0\expndtw0\kerning0
 ^
hello_world.cpp:9:1: error: stray ‘\’ in program
hello_world.cpp:9:1: error: stray ‘\’ in program
hello_world.cpp:9:1: error: stray ‘\’ in program
hello_world.cpp:9:1: error: stray ‘\’ in program
hello_world.cpp:9:1: error: stray ‘\’ in program
hello_world.cpp:10:1: error: stray ‘\’ in program
 \outl0\strokewidth0 \strokec2 #include <iostream>\
 ^
hello_world.cpp:10:1: error: stray ‘\’ in program
hello_world.cpp:10:1: error: stray ‘\’ in program
hello_world.cpp:10:31: error: stray ‘#’ in program
 \outl0\strokewidth0 \strokec2 #include <iostream>\
                               ^
hello_world.cpp:10:50: warning: backslash-newline at end of file
 \outl0\strokewidth0 \strokec2 #include <iostream>\
                                                  ^
hello_world.cpp:13:1: error: stray ‘#’ in program
 #ifdef _MSC_VER\
 ^
hello_world.cpp:14:1: error: stray ‘#’ in program
 #define _CRTDBG_MAP_ALLOC  \
 ^
hello_world.cpp:15:1: error: stray ‘#’ in program
 #include <crtdbg.h>\
 ^
hello_world.cpp:16:1: error: stray ‘#’ in program
 #define VS_MEM_CHECK _CrtSetDbgFlag(_CRTDBG_ALLOC_MEM_DF | _CRTDBG_LEAK_CHECK_DF);\
 ^
hello_world.cpp:17:1: error: stray ‘#’ in program
 #else\
 ^
hello_world.cpp:18:1: error: stray ‘#’ in program
 #define VS_MEM_CHECK;\
 ^
hello_world.cpp:19:1: error: stray ‘#’ in program
 #endif\
 ^
hello_world.cpp:10:1: error: stray ‘\’ in program
 \outl0\strokewidth0 \strokec2 #include <iostream>\
 ^
hello_world.cpp:23:17: warning: multi-line comment [-Wcomment]
  VS_MEM_CHECK   // check for memory leaks\
                 ^
hello_world.cpp:1:1: error: expected unqualified-id before ‘{’ token
 {\rtf1\ansi\ansicpg1252\cocoartf1561\cocoasubrtf100
 ^
Compilation Failed 0
